# podsreunion.com

./: .env.example  .gitignore  CNAME  Makefile  Procfile  README.md  SCOPE.md  datenschutz.html  impressum.html  index.html  manage.py  pyproject.toml  style.css
assets/: README.md
assets/airpods/cases/: README.md
assets/airpods/earbuds/: README.md
assets/airpods/products/: README.md
assets/favicons/: manifest.json
docs/architecture/: django-settings.md
docs/guides/: deployment.md  getting-started.md
pages/: admin.py  forms.py  models.py  views.py
pages/fixtures/: dev_superuser.json
pages/migrations/: 0001_initial.py  0002_seed_airpods_models.py
podsreunion/: asgi.py  urls.py  wsgi.py
podsreunion/settings/: __init__.py  development_psql.py  development_sqlite.py  production.py
static/: style.css
static/assets/: README.md
static/assets/airpods/earbuds/: README.md
static/assets/favicons/: browserconfig.xml  manifest.json
templates/pages/: datenschutz.html  impressum.html  index.html  seller_submission.html
tests/: test_public_pages.py
