[project]
name = "podsreunion"
version = "0.1.0"
description = "A Django app for the PodsReunion public site."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2,<5.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.10",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "podsreunion.settings.development_sqlite"
django_debug_mode = "keep"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
